correct minor bug on mobile with textbar

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ img {
 /* COMMON */
 .flex {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .list-scroll {
